# bot

./: .coverage  .coveragerc  .env.example  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
migrations/: 001_init.sql  002_epic5_users_assignments.sql  003_state_store_action_params.sql  004_course_weeks_schema.sql  005_rewire_materials_weeks.sql  006_fix_tsa_types.sql  007_materials_versions.sql  008_materials_hash_scope.sql  009_slots_location.sql  010_course_tz.sql  011_users_tz.sql  012_students_submissions.sql  013_slot_enrollments_week.sql  014_grades.sql  015_assignments_stub.sql  016_drop_assignments_fk_from_submissions.sql
scripts/: cleanup_state.py  doctor.sh  migrate.py  seed.py
tests/: conftest.py  test_assignment_matrix_ui.py  test_auth.py  test_auth_middleware_impersonation.py  test_bookings_repo.py  test_course_imports.py  test_course_info_ui.py  test_course_init.py  test_course_init_ui.py  test_epic4_flows.py  test_epic4_repos.py  test_impersonation_ui.py  test_imports_epic5.py  test_materials_links_repo.py  test_materials_repo.py  test_owner_commands.py  test_owner_materials_video_ui.py  test_owner_people_import_ui.py  test_owner_people_search_ui.py  test_owner_reports_ui.py  test_registration_epic5.py  test_registration_flows_epic5_ui.py  test_smoke.py  test_state_store.py  test_student_materials_visibility_ui.py  test_student_teacher_booking_e2e.py  test_student_ui_stub.py  test_student_uploads_ui.py  test_teacher_checkwork_ui.py  test_teacher_materials_ui.py  test_teacher_schedule_ui.py  (+3 more)
(+53 files in other folders)
