[tool.poetry]
name = "BOT"
version = "0.0.1"
description = "Teaching assistant bot scaffold"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.2"
aiogram = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
